--- a/static/css/index.css
+++ b/static/css/index.css
@@ -24,6 +24,21 @@ body::-webkit-scrollbar{
   height: 0;
   display: none;
 }
+
+body::-webkit-scrollbar-thumb {/*滚动条里面小方块*/
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+  background: #eee;
+}
+body::-webkit-scrollbar-track {/*滚动条里面轨道*/
+  -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+  border-radius: 10px;
+  background: #ffffff;
+}
+body::-webkit-scrollbar {/*滚动条整体样式*/
+  width: 10px;     /*高宽分别对应横竖滚动条的尺寸*/
+  height: 1px;
+}
 .main{
   width: 1200px;
   height: 100%;
@@ -31,7 +46,7 @@ body::-webkit-scrollbar{
 }
 .content{
   width: 100%;
-  background: #efefef;
+  /*background: #fff;*/
 }
 /*@media screen and (max-width: 1560px) {*/
   /*.main{*/
