--- a/static/css/index.css
+++ b/static/css/index.css
@@ -19,11 +19,11 @@ body{
   overflow: hidden;
   overflow-y: auto;
 }
-body::-webkit-scrollbar{
-  width: 0;
-  height: 0;
-  display: none;
-}
+/*body::-webkit-scrollbar{*/
+  /*width: 0;*/
+  /*height: 0;*/
+  /*display: none;*/
+/*}*/
 
 body::-webkit-scrollbar-thumb {/*滚动条里面小方块*/
   border-radius: 10px;
@@ -39,14 +39,15 @@ body::-webkit-scrollbar {/*滚动条整体样式*/
   width: 10px;     /*高宽分别对应横竖滚动条的尺寸*/
   height: 1px;
 }
+
+.content{
+  width: 100%;
+  position: relative;
+}
 .main{
   width: 1200px;
   height: 100%;
   margin: 0 auto;
-}
-.content{
-  width: 100%;
-  /*background: #fff;*/
 }
 /*@media screen and (max-width: 1560px) {*/
   /*.main{*/
